style: Fix unreadable label names
With the introduction of color themes (Bulma 1.0.0), the font colors
of labels were changed. Since these changes didn't account for my
original background color, some labels became unreadable. This
commit fixes the issue by overwriting the new styles.

--- a/static/mystyles.scss
+++ b/static/mystyles.scss
@@ -18,3 +18,9 @@ $section-padding: 1rem 1.5rem;
 
 .table tbody tr td { vertical-align: middle; }
 .button { margin: 0.2em auto; }
+
+// Use the same font color for both light and dark modes
+// to avoid buttons with inappropriately low contrast.
+//     Note that button's background color is decided by the user.
+.button.label-button { color: black; }
+.tag.label-tag { color: black; }
